add_library( renderboi_toolbox
    input_splitter.cpp
    input_splitter.hpp 
    script.hpp 
    controls/control.cpp
    controls/control.hpp
    controls/control_event_translator.hpp
    controls/control_scheme.hpp
    controls/controlled_entity_manager.hpp
    interfaces/action_event_receiver.hpp
    interfaces/default_control_scheme_provider.hpp
    interfaces/event_receiver.hpp
    interfaces/transform_proxy.hpp
    mesh_generators/axes_generator.cpp
    mesh_generators/axes_generator.hpp
    mesh_generators/cube_generator.cpp
    mesh_generators/cube_generator.hpp
    mesh_generators/mesh_generator.hpp
    mesh_generators/plane_generator.cpp
    mesh_generators/plane_generator.hpp
    mesh_generators/tetrahedron_generator.cpp
    mesh_generators/tetrahedron_generator.hpp
    mesh_generators/torus_generator.cpp
    mesh_generators/torus_generator.hpp
    render/scene_renderer.cpp
    render/scene_renderer.hpp 
    runnables/basic_window_manager.cpp
    runnables/basic_window_manager.hpp 
    runnables/camera_aspect_ratio_manager.cpp
    runnables/camera_aspect_ratio_manager.hpp 
    runnables/gamepad_movement_script.hpp 
    runnables/gamepad_camera_manager.cpp
    runnables/gamepad_camera_manager.hpp 
    runnables/input_logger.cpp
    runnables/input_logger.hpp
    runnables/keyboard_movement_script.hpp 
    runnables/mouse_camera_manager.cpp
    runnables/mouse_camera_manager.hpp 
    scene/scene.cpp
    scene/scene.hpp 
    scene/object.hpp 
    scene/components/basic_component.hpp
    scene/components/camera_component.hpp 
    scene/components/directional_light_component.hpp 
    scene/components/local_transform.hpp 
    scene/components/point_light_component.hpp 
    scene/components/rendered_mesh_component.hpp 
    scene/components/spot_light_component.hpp 
    scene/components/world_transform.hpp 
)

target_include_directories( renderboi_toolbox PUBLIC ${RENDERBOI_MAIN_INCLUDE_PATH} )
target_link_libraries( renderboi_toolbox PUBLIC
    ${CMAKE_DL_LIBS}
    glad
    EnTT::EnTT
    renderboi_core
    renderboi_window
    cpptools::cpptools_static
)
